// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options elevation 0 with layout 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5nkyt8-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options elevation 1 with layout 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5nkyt8-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options elevation undefined 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5nkyt8-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options elevation undefined with layout 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 css-5nkyt8-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options icon person with layout 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options icon undefined 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;

exports[`renders with form options icon undefined with layout 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 css-baxz4v-MuiPaper-root"
    description="description"
    form="[object Object]"
    parent="[object Object]"
    title="title"
  />
</div>
`;
